--- a/app/src/main/res/layout/book_a_table.xml
+++ b/app/src/main/res/layout/book_a_table.xml
@@ -21,14 +21,22 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:id="@+id/tv_selected_table_no"
+        android:layout_margin="10dp"
+        android:layout_below="@+id/appbAR"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:id="@+id/book_table_lay"
         android:layout_margin="10dp"
-        android:layout_below="@+id/appbAR"
+        android:layout_below="@+id/tv_selected_table_no"
         android:background="@drawable/payment_background">
 
         <TextView
